Removed background task since it does not work For now will focus on search logic without bg task. Created interface for a basic storage wrapper operations Fixed some namespaces for a project classes Removed IDirectory manager, so user can rename items when searching and this operations will not require current directory (because any searched item can be in different place and it has to decide how it is renamed for itself)

--- a/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
+++ b/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
@@ -151,7 +151,7 @@
                 <FontIcon FontSize="16" Glyph="&#xE712;" />
             </Button>
 
-            <Button Grid.Column="2" Command="{x:Bind ViewModel.SearchOperator.InitiateSearchCommand}"
+            <Button Grid.Column="2"
                     ToolTipService.ToolTip="Settings"
                     ToolTipService.Placement="Bottom"
                     Style="{StaticResource SmallIconButton}">
