--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -15,6 +15,7 @@
     xmlns:ui="using:FileExplorer.UI"
     xmlns:userControls="using:FileExplorer.UI.UserControls"
     xmlns:storageWrappers="using:FileExplorer.Models.StorageWrappers"
+    xmlns:storageWrappers1="using:Models.StorageWrappers"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -23,7 +24,7 @@
             <Setter Property="Padding" Value="10 8"  />
             <Setter Property="Margin" Value="0 0 10 0" />
         </Style>
-        <DataTemplate x:Key="GridItemTemplate" x:DataType="storageWrappers:DirectoryItemWrapper">
+        <DataTemplate x:Key="GridItemTemplate" x:DataType="storageWrappers1:DirectoryItemWrapper">
             <Grid  Padding="10  20 10 10">
 
                 <Grid.RowDefinitions>
