Created context dialog window for settings Developed navigation between settings mini pages that represent settings options Created Local Settings class for writing and reading from app's local settings Made better navigation services base class and interface

--- a/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
+++ b/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
@@ -188,6 +188,7 @@
             <Button Grid.Column="3"
                     ToolTipService.ToolTip="Settings"
                     ToolTipService.Placement="Bottom"
+                    Click="OnSettingsButtonClick"
                     Style="{StaticResource SmallIconButton}">
                 <FontIcon FontSize="16" Glyph="&#xE713;" />
             </Button>
